beta finish TrimmerSeekBar cjh

--- a/videotrimmerlibrary/src/main/res/layout/video_trimmer_view.xml
+++ b/videotrimmerlibrary/src/main/res/layout/video_trimmer_view.xml
@@ -20,7 +20,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_marginTop="50dp">
 
         <android.support.v7.widget.RecyclerView
@@ -30,7 +30,7 @@
 
         <com.cjh.videotrimmerlibrary.TrimmerSeekBar
             android:layout_width="match_parent"
-            android:layout_height="80dp" />
+            android:layout_height="match_parent" />
 
     </RelativeLayout>
 
