next step update cjh

--- a/videotrimmerlibrary/src/main/res/layout/video_trimmer_view.xml
+++ b/videotrimmerlibrary/src/main/res/layout/video_trimmer_view.xml
@@ -6,12 +6,14 @@
     android:orientation="vertical">
 
     <FrameLayout
+        android:id="@+id/videoViewWraper"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@android:color/black">
 
         <VideoView
-            android:id="@+id/mVideoView"
+            android:id="@+id/videoView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center" />
@@ -19,16 +21,21 @@
     </FrameLayout>
 
     <RelativeLayout
+        android:id="@+id/trimmerViewsWrapper"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="50dp">
+        android:layout_height="60dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="25dp">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/mRecyclerView"
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="60dp" />
 
         <com.cjh.videotrimmerlibrary.TrimmerSeekBar
+            android:id="@+id/trimmerSeekBar"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
