finihs release cjh

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="45dp">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:onClick="trimmer"
+        android:text="trimmer"
+        android:textAllCaps="false" />
 
-        <Button
-            android:onClick="trimmer"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="trimmer"
-            android:textAllCaps="false" />
-
-    </RelativeLayout>
-
-    <com.cjh.videotrimmerlibrary.VideoTrimmerView
-        android:id="@+id/mVideoTrimmerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</LinearLayout>
+</FrameLayout>
