--- a/videotrimmerlibrary/src/main/res/layout/video_trimmer_view.xml
+++ b/videotrimmerlibrary/src/main/res/layout/video_trimmer_view.xml
@@ -69,6 +69,7 @@
                 android:layout_height="60dp" />
 
             <com.cjh.videotrimmerlibrary.TrimmerSeekBar
+                android:visibility="visible"
                 android:id="@+id/trimmerSeekBar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
