add ffmpeg library cjh

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,12 @@
         android:text="trimmerByCustomDefaultConfig"
         android:textAllCaps="false" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:onClick="compressorAndTrim"
+        android:text="CompressorAndTrim video"
+        android:textAllCaps="false" />
+
 </LinearLayout>
