--- a/app/src/main/res/layout/activity_trimmer_video.xml
+++ b/app/src/main/res/layout/activity_trimmer_video.xml
@@ -13,7 +13,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:onClick="trimmer"
+            android:onClick="compressor"
             android:text="trimmer"
             android:textAllCaps="false" />
 
